--- a/app/index.html
+++ b/app/index.html
@@ -7,13 +7,32 @@
   <script src="libs/jquery-2.1.4.min.js"></script>
   <script src="libs/bootstrap.min.js"></script>
   <script src="libs/angular.min.js"></script>
+  <script src="libs/angular-resource.min.js"></script>
+  <script src="libs/angular-route.min.js"></script>
   <script src="src/app.js"></script>
+  <style type="text/css">
+    *{
+      margin:0;
+      padding:0;
+    }
+    body{
+      padding:40px;
+    }
+  </style>
 </head>
 <body>
   <div ng-controller="appCtrl">
-    <div>
-      <input ng-model="name" placeholder="enter your name." />
+    <div class="title">
+      <input ng-model="name" placeholder="test ng-model." />
       <span ng-bind="name"></span>
+    </div>
+    <div class="list">
+      <ul>
+        <li ng-repeat="list in lists.list | filter : name" class="itemList">
+          <div><a href="#/list/{{list.id}}" ng-bind="list.title"></a></div>
+          <div><span ng-bind="list.content"></span></div>
+        </li>
+      </ul>
     </div>
   </div>
 </body>
